--- a/css/style.css
+++ b/css/style.css
@@ -166,12 +166,17 @@ img{
     padding: 1rem 3rem;
     text-transform: uppercase;
     margin-bottom: 2rem;
+    border: none;
 }
 
 @media (min-width: 768px) {
     .boton{
         display: inline-block; /*permite disminuir y ubicar elemento en la parte izquierda*/
     }
+}
+
+.boton:hover{
+    cursor: pointer;
 }
 
 .boton--primario{
@@ -261,5 +266,32 @@ img{
     background-repeat: no-repeat;
     background-size: cover;
     height: 40rem;
-    margin: 5rem 0;
+    margin-top: 5rem;
+}
+
+.formulario{
+    background-color: var(--colorblanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 2rem;
+}
+
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+    gap: 2rem;
+}
+
+.campo__label{
+    flex: 0 0 9rem;
+    text-align: right;
+}
+
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+
+.campo__field--textarea{
+    height: 20rem;
 }
